# python_mono_repo

./: Jenkinsfile  README.md  configure_pdm.sh  pyproject.toml
.infra/: jenkins-slave.yaml
templates/package/: pyproject.toml
tools/lock-versions-comparator/: .pdm-python  pyproject.toml  requirements.txt
tools/lock-versions-comparator/src/lock_versions_comparator/: main.py
tools/models-codegen/: .pdm-python  Makefile  model_generation.py  pyproject.toml  requirements.txt
tools/models-codegen/models/enricher/: example_api.yaml
tools/monorepo-tools/: .pdm-python  README.md  pyproject.toml  requirements.txt
tools/monorepo-tools/src/via_monotools/: hook_file.py  linting.py  main.py  pdm.py
tools/monorepo-tools/src/via_monotools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
